--- a/css/indexStyle.css
+++ b/css/indexStyle.css
@@ -89,6 +89,76 @@ label {
   display: flex;
   flex-direction: row;
 }
+/*Desde aqui para los inputs*/
+
+.content-input input,
+.content-select select {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+.content-input input {
+  visibility: hidden !important;
+  position: absolute !important;
+  right: 0;
+}
+
+.content-input {
+  position: relative !important;
+  margin-bottom: 30px !important;
+  padding: 5px 0 5px 60px !important; /* Damos un padding de 60px para posicionar el elemento <i> en este espacio*/
+  display: block !important;
+}
+
+/* Estas reglas se aplicarán a todos las elementos i después de cualquier input*/
+.content-input input + i {
+  background: #f0f0f0 !important;
+  border: 2px solid rgba(0, 0, 0, 0.2) !important;
+  position: absolute !important;
+  left: 0 !important;
+  top: 0 !important;
+}
+
+/* Estas reglas se aplicarán a todos los i despues de un input de tipo radio*/
+.content-input input[type="radio"] + i {
+  height: 30px !important;
+  width: 30px !important;
+  border-radius: 100% !important;
+  left: 15px !important;
+}
+
+.content-input input[type="radio"] + i:before {
+  content: "";
+  display: block;
+  height: 18px !important;
+  width: 18px !important;
+  background: red !important;
+  border-radius: 100% !important;
+  position: absolute;
+  z-index: 1;
+  top: 4px;
+  left: 4px;
+  background: #2ac176 !important;
+  transition: all 0.25s ease !important; /* Todas las propiedades | tiempo | tipo movimiento */
+  transform: scale(0) !important/* Lo reducimos a 0*/;
+  opacity: 0 !important; /* Lo ocultamos*/
+}
+
+.content-input input[type="radio"]:checked + i:before {
+  transform: scale(1);
+  opacity: 1;
+}
+
+.content-input:hover input[type="radio"]:not(:checked) + i {
+  background: #b1e8cd !important;
+}
+
+.in {
+  margin-right: 5px;
+}
+
+/*Hasta aqui*/
 
 .cat {
   display: flex;
@@ -113,6 +183,16 @@ label {
   filter: brightness(1.3);
 }
 
+.cat label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cat label input {
+  margin-left: 10px !important;
+}
+
 .selected-Cat {
   filter: brightness(1.3) !important;
   border: 3px solid blue !important;
@@ -127,7 +207,7 @@ label {
   text-align: center;
   margin-top: 10px;
   color: white;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 .btnContainer {
@@ -249,7 +329,7 @@ label {
   }
 }
 
-@media only screen and (max-width: 410px) {
+@media only screen and (max-width: 440px) {
   .categories {
     flex-direction: column;
   }
