--- a/css/generalStyle.css
+++ b/css/generalStyle.css
@@ -1,87 +1,74 @@
-@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap');
 
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: "Kumbh Sans", sans-serif;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Kumbh Sans', sans-serif;
 }
 
-.br0-up {
-  margin-top: 0.5em;
+.general-container {
+    width: 100%;
+    border: 3px solid red;
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 97vh;
 }
 
-.br0_5-up {
-  margin-top: 1em;
-}
-
-.br1-up {
-  margin-top: 1.5em;
-}
-
-.br1_2-up {
-  margin-top: 2em;
-}
-
-.br2-up {
-  margin-top: 2.5em;
-}
-
-.br2_3-up {
-  margin-top: 3em;
-}
-
-.br3-up {
-  margin-top: 3.5em;
-}
-
-.br3_4-up {
-  margin-top: 4em;
+.qa-container {
+    width: 80%;
+    background: white;
+    margin: 10 auto;
+    padding: 3rem;
+    border-radius: 8px;
+    text-align: justify;
 }
 
 .hide {
-  display: none;
+    display: none;
 }
 
 .round {
-  border-radius: 8px;
+    border-radius: 8px;
 }
 
 .rounded {
-  border-radius: 90%;
+    border-radius: 100%;
 }
 
 /*Loader Animation - css*/
 .loader {
-  position: fixed;
-  z-index: 99;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgb(40, 57, 78);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  transition: 1s;
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgb(40, 57, 78);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: 1s;
 }
 
 .loader h3 {
-  color: white;
-  font-size: 25px;
-  font-weight: 300;
+    color: white;
+    font-size: 25px;
+    font-weight: 300;
 }
 
 .loader.hidden {
-  animation: fadeOut 0.5s;
-  animation-fill-mode: forwards;
-  visibility: hidden;
+    animation: fadeOut 0.5s;
+    animation-fill-mode: forwards;
+    visibility: hidden;
 }
 
 @keyframes fadeOut {
-  100% {
-    opacity: 0;
-    visibility: none;
-  }
+    100% {
+        opacity: 0;
+        visibility: none;
+    }
 }
