--- a/css/indexStyle.css
+++ b/css/indexStyle.css
@@ -1,352 +1,323 @@
 .body-index {
-  background: #bbd3e9 url("../media/bg/index-bg1-w.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
+    background: #bbd3e9 url('../media/bg/index-bg1-w.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .container {
-  display: flex;
-  padding: 10px;
-  flex-direction: row;
-  justify-content: space-between;
+    display: flex;
+    padding: 10px;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .userRegister {
-  border: 3px solid rgb(255, 255, 255);
-  margin: 10px;
-  padding: 10px;
-  width: 40%;
-  backdrop-filter: blur(3px);
-  background: rgba(255, 255, 255, 0);
-  background: linear-gradient(
-    0deg,
-    rgba(255, 255, 255, 0.527) 0%,
-    rgba(17, 1, 78, 0.7) 100%
-  );
-  box-shadow: 0 0 25px 8px rgba(142, 142, 255, 0.514);
+    border: 3px solid rgb(255, 255, 255);
+    margin: 10px;
+    padding: 10px;
+    width: 40%;
+    backdrop-filter: blur(3px);
+    background: rgba(255, 255, 255, 0);
+    background: linear-gradient(0deg, rgba(255, 255, 255, 0.527) 0%, rgba(17, 1, 78, 0.7) 100%);
+    box-shadow: 0 0 25px 8px rgba(142, 142, 255, 0.514);
 }
 
 .titleContainer {
-  margin-top: 30px !important;
-  margin-bottom: 0px !important;
-  margin: 0px auto;
-  color: white;
-  font-size: 25px;
-  text-align: center;
+    margin-top: 30px !important;
+    margin-bottom: 0px !important;
+    margin: 0px auto;
+    color: white;
+    font-size: 25px;
+    text-align: center;
 }
 
 .brand-name {
-  margin-top: 10px;
-  display: block;
-  font-weight: bold;
+    margin-top: 10px;
+    display: block;
+    font-weight: bold;
 }
 
 .userRegisterForm {
-  margin-top: 25px;
-  padding: 15px;
+    margin-top: 25px;
+    padding: 15px;
 }
 
 .nameInput {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  padding: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 5px;
 }
 
-label {
-  text-align: center;
-  font-size: 22px;
-  color: white;
-  margin: 12px 0px;
+.label-title {
+    text-align: center;
+    font-size: 22px;
+    color: white;
+    margin: 12px 0px;
 }
 
 .input {
-  border: 3px solid white;
-  display: block;
-  padding: 6px 0px;
-  text-align: center;
-  color: white;
-  font-size: 18px;
-  width: 60%;
-  background: rgb(19, 19, 19);
-  background: linear-gradient(
-    180deg,
-    rgba(19, 19, 19, 1) 0%,
-    rgba(62, 87, 104, 1) 100%
-  );
+    outline: none;
+    border: 3px solid white;
+    display: block;
+    padding: 6px 0px;
+    text-align: center;
+    color: white;
+    font-size: 18px;
+    width: 60%;
+    background: rgb(19, 19, 19);
+    background: linear-gradient(180deg, rgba(19, 19, 19, 1) 0%, rgba(62, 87, 104, 1) 100%);
 }
 
 .categoriesContainer {
-  margin-top: 40px;
-  padding: 5px;
-  display: flex;
-  flex-direction: column;
+    margin-top: 40px;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
 }
 
 .categories {
-  display: flex;
-  flex-direction: row;
+    display: flex;
+    flex-direction: row;
 }
+
+.cat {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 3px solid white;
+    width: 40%;
+    padding: 10px;
+    margin: 0px auto;
+    background: rgb(19, 19, 19);
+    background: linear-gradient(180deg, rgba(19, 19, 19, 1) 0%, rgba(62, 87, 104, 1) 100%);
+    transition: 0.15s;
+}
+
 /*Desde aqui para los inputs*/
 
-.content-input input,
-.content-select select {
-  appearance: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
+.input-container {
+    color: white;
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-top: 1.5em;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 18px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
-.content-input input {
-  visibility: hidden !important;
-  position: absolute !important;
-  right: 0;
+/* Hide the browser's default radio button */
+.input-container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
 }
 
-.content-input {
-  position: relative !important;
-  margin-bottom: 30px !important;
-  padding: 5px 0 5px 60px !important; /* Damos un padding de 60px para posicionar el elemento <i> en este espacio*/
-  display: block !important;
+/* Create a custom radio button */
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background-color: #eee;
+    border-radius: 50%;
 }
 
-/* Estas reglas se aplicarán a todos las elementos i después de cualquier input*/
-.content-input input + i {
-  background: #f0f0f0 !important;
-  border: 2px solid rgba(0, 0, 0, 0.2) !important;
-  position: absolute !important;
-  left: 0 !important;
-  top: 0 !important;
+/* On mouse-over, add a grey background color */
+.cat:hover input ~ .checkmark {
+    background-color: rgb(175, 175, 175);
 }
 
-/* Estas reglas se aplicarán a todos los i despues de un input de tipo radio*/
-.content-input input[type="radio"] + i {
-  height: 30px !important;
-  width: 30px !important;
-  border-radius: 100% !important;
-  left: 15px !important;
+/* When the radio button is checked, add a blue background */
+.input-container input:checked ~ .checkmark {
+    background-color: rgb(62, 0, 119);
 }
 
-.content-input input[type="radio"] + i:before {
-  content: "";
-  display: block;
-  height: 18px !important;
-  width: 18px !important;
-  background: red !important;
-  border-radius: 100% !important;
-  position: absolute;
-  z-index: 1;
-  top: 4px;
-  left: 4px;
-  background: #2ac176 !important;
-  transition: all 0.25s ease !important; /* Todas las propiedades | tiempo | tipo movimiento */
-  transform: scale(0) !important/* Lo reducimos a 0*/;
-  opacity: 0 !important; /* Lo ocultamos*/
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+    content: '';
+    position: absolute;
+    display: none;
 }
 
-.content-input input[type="radio"]:checked + i:before {
-  transform: scale(1);
-  opacity: 1;
+/* Show the indicator (dot/circle) when checked */
+.input-container input:checked ~ .checkmark:after {
+    display: block;
 }
 
-.content-input:hover input[type="radio"]:not(:checked) + i {
-  background: #b1e8cd !important;
-}
-
-.in {
-  margin-right: 5px;
+/* Style the indicator (dot/circle) */
+.input-container .checkmark:after {
+    /*top: 30%;
+	left: 30%;*/
+    margin: 5px;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: white;
 }
 
 /*Hasta aqui*/
 
-.cat {
-  display: flex;
-  flex-direction: column;
-  border: 3px solid white;
-  width: 40%;
-  padding: 10px;
-  margin: 0px auto;
-  background: rgb(19, 19, 19);
-  background: linear-gradient(
-    180deg,
-    rgba(19, 19, 19, 1) 0%,
-    rgba(62, 87, 104, 1) 100%
-  );
-  transition: 0.15s;
-}
-
-.cat:hover {
-  cursor: pointer;
-  border: 3px solid rgb(68, 118, 255);
-  transition: 0.15s;
-  filter: brightness(1.3);
-}
-
-.cat label {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.cat label input {
-  margin-left: 10px !important;
-}
-
 .selected-Cat {
-  filter: brightness(1.3) !important;
-  border: 3px solid blue !important;
+    filter: brightness(1.3) !important;
+    border: 3px solid blue !important;
 }
 
 .img-cat {
-  width: 80%;
-  margin: 0px auto;
+    user-select: none;
+    width: 80%;
+    margin: 0px auto;
 }
 
 .cat-name {
-  text-align: center;
-  margin-top: 10px;
-  color: white;
-  font-size: 16px;
+    text-align: center;
+    margin-top: 10px;
+    color: white;
+    font-size: 16px;
 }
 
 .btnContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .btn {
-  margin-top: 30px;
-  color: white;
-  border: 3px solid white;
-  width: 50%;
-  font-size: 20px;
-  padding: 20px;
-  background: rgb(19, 19, 19);
-  background: linear-gradient(
-    180deg,
-    rgba(19, 19, 19, 1) 0%,
-    rgba(62, 87, 104, 1) 100%
-  );
-  transition: 0.15s;
+    margin-top: 30px;
+    color: white;
+    border: 3px solid white;
+    width: 50%;
+    font-size: 20px;
+    padding: 20px;
+    background: rgb(19, 19, 19);
+    background: linear-gradient(180deg, rgba(19, 19, 19, 1) 0%, rgba(62, 87, 104, 1) 100%);
+    transition: 0.15s;
 }
 
 .btn:hover {
-  cursor: pointer;
-  border: 3px solid rgb(68, 118, 255);
-  transition: 0.15s;
-  filter: brightness(1.3);
+    cursor: pointer;
+    border: 3px solid rgb(68, 118, 255);
+    transition: 0.15s;
+    filter: brightness(1.3);
 }
 
 .rules {
-  border: 3px solid rgb(255, 255, 255);
-  background: rgba(255, 255, 255, 0.5);
-  margin: 10px;
-  padding: 10px;
-  width: 56%;
-  height: 5%;
-  backdrop-filter: blur(2px);
+    border: 3px solid rgb(255, 255, 255);
+    background: rgba(255, 255, 255, 0.5);
+    margin: 10px;
+    padding: 10px;
+    width: 56%;
+    height: 5%;
+    backdrop-filter: blur(2px);
 }
 
 .text-white {
-  color: white;
+    color: white;
 }
 
 .rules-title {
-  color: white;
-  display: block;
-  margin-bottom: 10px;
+    color: white;
+    display: block;
+    margin-bottom: 10px;
 }
 
 .rules-text {
-  color: white;
-  margin: 6px auto;
+    color: white;
+    margin: 6px auto;
 }
 
 @media only screen and (max-width: 1400px) {
-  .body-index {
-    background: #bbd3e9 url("../media/bg/index-bg1-s.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-  .cat-name {
-    text-align: center;
-    margin-top: 10px;
-    color: white;
-    font-size: 15px;
-  }
-  .input {
-    width: 70%;
-  }
+    .body-index {
+        background: #bbd3e9 url('../media/bg/index-bg1-s.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+    .cat-name {
+        text-align: center;
+        margin-top: 10px;
+        color: white;
+        font-size: 15px;
+    }
+    .input {
+        width: 70%;
+    }
 }
 
 @media only screen and (max-width: 1025px) {
-  .body-index {
-    background: #bbd3e9 url("../media/bg/index-bg1-p.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-  .container {
-    flex-direction: column-reverse;
-  }
-  .cat-name {
-    text-align: center;
-    margin-top: 10px;
-    color: white;
-    font-size: 15px;
-  }
-  .userRegister {
-    width: 100%;
-    margin: 0 auto;
-  }
-  .cat {
-    width: 35%;
-  }
-  .rules {
-    width: 100%;
-    margin: 0 auto;
-    margin-bottom: 35px;
-    margin-top: 15px;
-  }
+    .body-index {
+        background: #bbd3e9 url('../media/bg/index-bg1-p.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+    .container {
+        flex-direction: column-reverse;
+    }
+    .cat-name {
+        text-align: center;
+        margin-top: 10px;
+        color: white;
+        font-size: 15px;
+    }
+    .userRegister {
+        width: 100%;
+        margin: 0 auto;
+    }
+    .cat {
+        width: 35%;
+    }
+    .rules {
+        width: 100%;
+        margin: 0 auto;
+        margin-bottom: 35px;
+        margin-top: 15px;
+    }
 }
 
 @media only screen and (max-width: 512px) {
-  .body-index {
-    background: #bbd3e9 url("../media/bg/index-bg1-m.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-  .container {
-    flex-direction: column-reverse;
-  }
-  .cat {
-    width: 40%;
-  }
-  .cat-name {
-    font-size: 14px;
-  }
+    .body-index {
+        background: #bbd3e9 url('../media/bg/index-bg1-m.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+    .container {
+        flex-direction: column-reverse;
+    }
+    .cat {
+        width: 40%;
+    }
+    .cat-name {
+        font-size: 14px;
+    }
 }
 
 @media only screen and (max-width: 440px) {
-  .categories {
-    flex-direction: column;
-  }
-  .img-cat {
-    width: 40%;
-  }
-  .cat {
-    margin: 15px auto;
-    width: 90%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-  }
-  .btn {
-    width: 80%;
-  }
-  .input {
-    width: 90%;
-  }
+    .categories {
+        flex-direction: column;
+    }
+    .img-cat {
+        width: 40%;
+    }
+    .cat {
+        margin: 15px auto;
+        width: 90%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    .btn {
+        width: 80%;
+    }
+    .input {
+        width: 90%;
+    }
 }
