--- a/css/generalStyle.css
+++ b/css/generalStyle.css
@@ -1,15 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Kumbh Sans', sans-serif;
 }
 
 .general-container {
+    font-family: 'Quicksand', sans-serif;
     width: 100%;
-    border: 3px solid red;
     padding: 1rem;
     display: flex;
     justify-content: center;
@@ -21,10 +21,14 @@
 .qa-container {
     text-align: justify;
     font-size: 20px;
-    width: 80%;
+    width: 50%;
     margin: 10 auto;
     padding: 3rem;
     border-radius: 8px;
+    border: 3px solid white;
+    -webkit-box-shadow: 0px 0px 34px 1px rgba(255, 255, 255, 0.43);
+    -moz-box-shadow: 0px 0px 34px 1px rgba(255, 255, 255, 0.43);
+    box-shadow: 0px 0px 34px 1px rgba(255, 255, 255, 0.43);
 }
 
 .hide {
@@ -56,6 +60,7 @@
 }
 
 .loader h3 {
+    font-family: 'Kumbh Sans', sans-serif;
     color: white;
     font-size: 25px;
     font-weight: 300;
