--- a/css/indexStyle.css
+++ b/css/indexStyle.css
@@ -9,6 +9,7 @@
     padding: 10px;
     flex-direction: row;
     justify-content: space-between;
+    font-family: 'Kumbh Sans', sans-serif;
 }
 
 .userRegister {
@@ -192,7 +193,7 @@
     align-items: center;
 }
 
-.btn {
+.index-btn {
     margin-top: 30px;
     color: white;
     border: 3px solid white;
@@ -204,7 +205,7 @@
     transition: 0.15s;
 }
 
-.btn:hover {
+.index-btn:hover {
     cursor: pointer;
     border: 3px solid rgb(68, 118, 255);
     transition: 0.15s;
