--- a/css/generalStyle.css
+++ b/css/generalStyle.css
@@ -25,10 +25,29 @@
     margin: 10 auto;
     padding: 3rem;
     border-radius: 8px;
-    border: 3px solid white;
+    border: 3px solid rgb(255, 255, 255);
+    transition: 0.3s;
     -webkit-box-shadow: 0px 0px 34px 1px rgba(255, 255, 255, 0.43);
     -moz-box-shadow: 0px 0px 34px 1px rgba(255, 255, 255, 0.43);
     box-shadow: 0px 0px 34px 1px rgba(255, 255, 255, 0.43);
+}
+
+.controller {
+    margin-top: 2.5rem;
+}
+
+.controller .answer-btn {
+    background: #11998e; /* fallback for old browsers */
+    background: -webkit-linear-gradient(
+        to right,
+        #38ef7d,
+        #11998e
+    ); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(
+        to right,
+        #38ef7d,
+        #11998e
+    ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .hide {
