--- a/css/spaceCatStyle.css
+++ b/css/spaceCatStyle.css
@@ -4,15 +4,23 @@
 }
 
 #space-question-container {
-    background: #0f2027; /* fallback for old browsers */
-    background-image: url('https://www.transparenttextures.com/patterns/dotnoise-light-grey.png');
-    /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
+    background: #0f2027;
+    background-image: url('../media/bg/darkness.png');
 }
 
-#space-question-container h1 {
+#space-question-container .indicators {
     font-family: 'Kumbh Sans', sans-serif;
     margin: 1rem 0;
     color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.numeric-ind {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    gap: 1rem;
 }
 
 #question {
@@ -35,32 +43,27 @@
     font-size: 18px;
     font-weight: 400;
     border: 1px solid white;
-    background: #0f2027; /* fallback for old browsers */
+    transition: 0.2s;
+    background: #4b6cb7; /* fallback for old browsers */
     background: -webkit-linear-gradient(
         to right,
-        #2c5364,
-        #203a43,
-        #0f2027
+        #182848,
+        #4b6cb7
     ); /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(
         to right,
-        #2c5364,
-        #203a43,
-        #0f2027
+        #182848,
+        #4b6cb7
     ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    /*background: #000000; /* fallback for old browsers */
-    /* background: -webkit-linear-gradient(
-        to right,
-        #f7797d,
-        #fbd786,
-        #c6ffdd */
-    /*); /* Chrome 10-25, Safari 5.1-6 */
-    /*background: linear-gradient(
-        to right,
-        #f7797d,
-        #fbd786,
-        #c6ffdd
-    ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.answer-btn:hover {
+    transform: scale(1.03);
+    cursor: pointer;
+    filter: brightness(1.2);
+    -webkit-box-shadow: 0px 0px 34px 0px rgba(255, 255, 255, 0.43);
+    -moz-box-shadow: 0px 0px 34px 0px rgba(255, 255, 255, 0.43);
+    box-shadow: 0px 0px 24px 0px rgba(255, 255, 255, 0.43);
 }
 
 .btn-grid {
