Questions index counter and indicator finished

--- a/css/generalStyle.css
+++ b/css/generalStyle.css
@@ -50,6 +50,10 @@
     ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
+#results {
+    color: white;
+}
+
 .correct-answer {
     /* background: green !important; */
     border: 3px solid rgb(0, 255, 0) !important;
