--- a/css/spaceCatStyle.css
+++ b/css/spaceCatStyle.css
@@ -3,47 +3,12 @@
     background-image: url('../media/bg/triangle.png');
 }
 
-#space-question-container {
+.body-space #question-container {
     background: #0f2027;
     background-image: url('../media/bg/darkness.png');
 }
 
-#space-question-container .indicators {
-    font-family: 'Kumbh Sans', sans-serif;
-    margin: 1rem 0;
-    color: white;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.numeric-ind {
-    display: grid;
-    grid-template-columns: repeat(2, auto);
-    gap: 1rem;
-}
-
-#question {
-    color: white;
-    font-size: 20px;
-    font-weight: 400;
-    margin-bottom: 2.5rem;
-}
-
-.answer-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    border-radius: 8px;
-    outline: none;
-    border: none;
-    padding: 2em 0;
-    color: white;
-    font-size: 18px;
-    font-weight: 400;
-    border: 1px solid white;
-    transition: 0.2s;
+.body-space .answer-btn {
     background: #4b6cb7; /* fallback for old browsers */
     background: -webkit-linear-gradient(
         to right,
@@ -55,19 +20,4 @@
         #182848,
         #4b6cb7
     ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
-
-.answer-btn:hover {
-    transform: scale(1.03);
-    cursor: pointer;
-    filter: brightness(1.2);
-    -webkit-box-shadow: 0px 0px 34px 0px rgba(255, 255, 255, 0.43);
-    -moz-box-shadow: 0px 0px 34px 0px rgba(255, 255, 255, 0.43);
-    box-shadow: 0px 0px 24px 0px rgba(255, 255, 255, 0.43);
-}
-
-.btn-grid {
-    display: grid;
-    grid-template-columns: repeat(2, auto);
-    gap: 1.5rem;
 }
