--- a/css/generalStyle.css
+++ b/css/generalStyle.css
@@ -26,7 +26,7 @@
     padding: 3rem;
     border-radius: 8px;
     border: 3px solid rgb(255, 255, 255);
-    transition: 1s;
+    transition: 0.5s;
     animation: ease-in-out;
     -webkit-box-shadow: 0px 0px 34px 1px rgba(255, 255, 255, 0.43);
     -moz-box-shadow: 0px 0px 34px 1px rgba(255, 255, 255, 0.43);
@@ -50,9 +50,9 @@
 
 #question {
     color: white;
-    font-size: 20px;
+    font-size: 1.3rem;
     font-weight: 400;
-    margin-bottom: 2.5rem;
+    margin: 2.5rem 0;
 }
 
 .answer-btn {
@@ -198,5 +198,79 @@
     100% {
         opacity: 0;
         visibility: none;
+    }
+}
+
+@media (orientation: landscape) {
+    .general-container {
+        height: auto;
+    }
+}
+
+@media (max-width: 1345px) {
+    .qa-container {
+        width: 75%;
+    }
+}
+
+@media (max-width: 900px) {
+    .qa-container {
+        width: 95%;
+        text-align: center;
+    }
+}
+
+@media (max-width: 690px) {
+    .qa-container {
+        width: 95%;
+        padding: 2rem;
+    }
+    .indicators {
+        flex-direction: column;
+    }
+    .numeric-ind {
+        margin-top: 0.5rem;
+    }
+}
+
+@media (max-width: 485px) {
+    .qa-container {
+        width: 95%;
+        padding: 1.7rem;
+    }
+    .answer-btn {
+        padding: 0.8rem;
+    }
+    .btn-grid {
+        display: grid;
+        grid-template-columns: repeat(1, auto);
+        gap: 1rem;
+    }
+}
+
+@media (max-width: 390px) {
+    .indicators h2 {
+        font-size: 1.6rem;
+    }
+    .indicators h3 {
+        font-size: 1.3rem;
+    }
+    #question {
+        color: white;
+        font-size: 1.1rem;
+        font-weight: 400;
+        margin: 2.2rem 0;
+    }
+}
+
+@media (max-width: 325px) {
+    .general-container {
+        height: auto;
+    }
+    .indicators h2 {
+        font-size: 1.2rem;
+    }
+    .indicators h3 {
+        font-size: 0.8rem;
     }
 }
