--- a/css/indexStyle.css
+++ b/css/indexStyle.css
@@ -28,7 +28,7 @@
     margin-bottom: 0px !important;
     margin: 0px auto;
     color: white;
-    font-size: 25px;
+    font-size: 1.6rem;
     text-align: center;
 }
 
@@ -39,7 +39,6 @@
 }
 
 .userRegisterForm {
-    margin-top: 25px;
     padding: 15px;
 }
 
@@ -56,7 +55,7 @@
     text-align: center;
     font-size: 22px;
     color: white;
-    margin: 12px 0px;
+    margin: 10px 0px;
 }
 
 .input {
@@ -73,10 +72,11 @@
 }
 
 .categoriesContainer {
-    margin-top: 40px;
-    padding: 5px;
-    display: flex;
-    flex-direction: column;
+    margin-top: 2rem;
+    padding: 5px 0;
+    display: grid;
+    grid-template-rows: repeat(2, auto);
+    gap: 1rem !important;
 }
 
 .categories {
@@ -90,7 +90,7 @@
     justify-content: center;
     align-items: center;
     border: 3px solid white;
-    width: 40%;
+    width: 35%;
     padding: 10px;
     margin: 0px auto;
     background: rgb(19, 19, 19);
@@ -238,6 +238,12 @@
 }
 
 @media only screen and (max-width: 1400px) {
+    .userRegister {
+        width: 50%;
+    }
+    .rules {
+        width: 50%;
+    }
     .body-index {
         background: #bbd3e9 url('../media/bg/index-bg1-s.jpg');
         background-size: cover;
@@ -261,7 +267,7 @@
         background-repeat: no-repeat;
     }
     .container {
-        flex-direction: column-reverse;
+        flex-direction: column;
     }
     .cat-name {
         text-align: center;
@@ -291,7 +297,7 @@
         background-repeat: no-repeat;
     }
     .container {
-        flex-direction: column-reverse;
+        flex-direction: column;
     }
     .cat {
         width: 40%;
@@ -302,6 +308,12 @@
 }
 
 @media only screen and (max-width: 440px) {
+    .title{
+        font-size: 2rem;
+    }
+    .label-title{
+        font-size: 1.2rem;
+    }
     .categories {
         flex-direction: column;
     }
