--- a/css/generalStyle.css
+++ b/css/generalStyle.css
@@ -102,6 +102,22 @@
     color: white;
 }
 
+#resultsDiv {
+    align-items: center;
+    justify-content: space-between;
+    display: flex;
+    flex-direction: row;
+}
+
+.btn-playAgain {
+    margin: 2.5rem;
+    padding: 3rem 2.5rem;
+}
+
+.btn-playAgain:hover {
+    filter: brightness(1.2);
+}
+
 .btn-grid {
     display: grid;
     grid-template-columns: repeat(2, auto);
@@ -205,7 +221,7 @@
 
 .hide {
     transition: 0.5s;
-    display: none;
+    display: none !important;
 }
 
 .disabled {
