--- a/css/spaceCatStyle.css
+++ b/css/spaceCatStyle.css
@@ -67,3 +67,15 @@
 .body-space .modal-btn-close:hover {
     filter: brightness(1.2);
 }
+
+.body-space .btn-playAgain {
+    padding: 3rem 2.5rem;
+    border-radius: 6px;
+    transition: 0.2s;
+    cursor: pointer;
+    font-weight: 600;
+    color: white;
+    background: #4b6cb7;
+    background: -webkit-linear-gradient(to right, #182848, #4b6cb7);
+    background: linear-gradient(to right, #182848, #4b6cb7);
+}
